--- a/pricing.html
+++ b/pricing.html
@@ -3,7 +3,7 @@
 <head>
     <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
     <meta charset="utf-8" />
-    <title>thempleite - Responsive Website Template</title>
+    <title>InglesAI</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <meta content="" name="description" />
     <meta content="" name="author" />
@@ -25,6 +25,9 @@
     <link href="assets/css/magic_space.css" rel="stylesheet" type="text/css" />
     <link href="assets/css/responsive.css" rel="stylesheet" type="text/css" />
     <link href="assets/css/animate.min.css" rel="stylesheet" type="text/css" />
+
+
+    <link rel="stylesheet" type="text/css" href="videos.css" />
     <!-- END CSS TEMPLATE -->
 </head>
 <!-- END HEAD -->
@@ -45,240 +48,141 @@
                     </div>
                     <div class="navbar-collapse collapse">
                         <ul class="nav navbar-nav navbar-right">
-                            <li><a href="index.html">Home</a></li>
-                            <li><a href="tour.html">Tour</a></li>
-                            <li><a href="pricing.html">Pricing</a></li>
-                            <li><a href="portfolio.html">Portfolio</a></li>
-                            <li><a href="contact.html">Contact</a></li>
+                            <li><a href="index.html">Inicio</a></li>
+                            <li><a href="publicaciones.html">Publicaciones</a></li>
+                            <li><a href="videos.html">Videos</a></li>
+                            <li><a href="contacto.html">Contacto</a></li>
                         </ul>
                     </div>
                     <!--/.nav-collapse -->
                 </div>
             </div>
         </div>
-        <div class="section grey text-center m-t-60 p-t-40 p-b-40" id="banner-footer">
-            <h2 class="normal m-b-10">
-                Pricing and Plans</h2>
-            <p>
-                Simple and clear, no hidden fees</p>
-        </div>
-        <div class="section white">
-            <div class="container p-t-50 p-b-50">
-                <div class="p-t-10">
-                    <div class="pricing t-mgr40">
-                        <div class="col-sm-4">
-                            <div class="plan active">
-                                <h3>
-                                    Standard</h3>
-                                <h4>
-                                    <span class="amount"><span>$</span>29<span>/mo</span></span></h4>
-                                <div>
-                                    <ul>
-                                        <li>250GB Disk Space</li>
-                                        <li>10 Email Accounts</li>
-                                        <li>Unlimited Bandwidth</li>
-                                        <li>24/7 Support</li>
-                                    </ul>
-                                </div>
-                                <div class="select">
-                                    <div>
-                                        <a class="btn btn-info" href="#" target="_self">Sign me up <i class="arrow_right">→</i></a></div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-sm-4">
-                            <div class="plan">
-                                <h3>
-                                    Premium</h3>
-                                <h4>
-                                    <span class="amount"><span>$</span>49<span>/mo</span></span></h4>
-                                <div>
-                                    <ul>
-                                        <li>250GB Disk Space</li>
-                                        <li>20 Email Accounts</li>
-                                        <li>Unlimited Bandwidth</li>
-                                        <li>24/7 Support</li>
-                                    </ul>
-                                </div>
-                                <div class="select">
-                                    <div>
-                                        <a class="btn btn-info" href="#" target="_self">Sign me up <i class="arrow_right">→</i></a></div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-sm-4">
-                            <div class="plan">
-                                <h3>
-                                    Deluxe</h3>
-                                <h4>
-                                    <span class="amount"><span>$</span>79<span>/mo</span></span></h4>
-                                <div>
-                                    <ul>
-                                        <li>300GB Disk Space</li>
-                                        <li>40 Email Accounts</li>
-                                        <li>Unlimited Bandwidth</li>
-                                        <li>24/7 Support</li>
-                                    </ul>
-                                </div>
-                                <div class="select">
-                                    <div>
-                                        <a class="btn btn-info" href="#" target="_self">Sign me up <i class="arrow_right">→</i></a></div>
-                                </div>
+        <div class="section first white">
+                            <div class="section grey p-t-20  p-b-20 m-b-50">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-md-6">
+                                <h2>
+                                    Videos</h2>
                             </div>
                         </div>
                     </div>
                 </div>
-            </div>
         </div>
-        <div class="section grey">
-            <div class="container">
-                <div class="p-t-60 p-b-50">
-                    <div id="testomonials" class="owl-carousel row">
-                        <div class="item">
-                            <div class="col-md-6  col-md-offset-3 text-center">
-                                <div class="testimonial-thumb">
-                                    <img src="assets/img/testimonial_img1.png" alt="testimonal">
-                                </div>
-                                <div class="testimonial-user">
-                                    <span>John Donga</span> Greepit.com
-                                </div>
-                                <h3 class="normal text-center">
-                                    I have always received good service from the Frittt Templates. Timing and quality
-                                    have always met my expectations and everything is communicated in a professional
-                                    and timely manner.
-                                </h3>
-                            </div>
-                        </div>
-                        <div class="item">
-                            <div class="col-md-6   col-md-offset-3 text-center">
-                                <div class="testimonial-thumb">
-                                    <img src="assets/img/testimonial_img2.png" alt="testimonal">
-                                </div>
-                                <div class="testimonial-user">
-                                    <span>John Donga</span> Frittt.com
-                                </div>
-                                <h3 class="normal text-center">
-                                    We consider the Frittt Templates team a development partner who has proven to be
-                                    creative in problem resolution, reliable in time commitments, and overall consistent
-                                    in meeting our expectations.
-                                </h3>
-                            </div>
-                        </div>
-                        <div class="item">
-                            <div class="col-md-6   col-md-offset-3 text-center">
-                                <div class="testimonial-thumb">
-                                    <img src="assets/img/testimonial_img3.png" alt="testimonal">
-                                </div>
-                                <div class="testimonial-user">
-                                    <span>John Donga</span> www.Frittt.com
-                                </div>
-                                <h3 class="semi-bold text-center">
-                                    The work was above and beyond what I could have expected. Excellent service all
-                                    the way around from start to finish. Keep up the GREAT work! Great job!
-                                </h3>
-                            </div>
-                        </div>
+        <div class="grid-row reverse video-gallery">
+          <input type="radio" value="1" name="video-list" id="video-1" checked="checked" /><label for="video-1">Capitulo 1</label>
+          <input type="radio" value="2" name="video-list" id="video-2" /><label for="video-2">Capitulo 2</label>
+          <input type="radio" value="3" name="video-list" id="video-3" /><label for="video-3">Capitulo 3</label>
+          <input type="radio" value="4" name="video-list" id="video-4" /><label for="video-4">Capitulo 4</label>
+          <input type="radio" value="5" name="video-list" id="video-5" /><label for="video-5">Capitulo 5</label>
+          <input type="radio" value="6" name="video-list" id="video-6" /><label for="video-6">Capitulo 6</label>
+          <input type="radio" value="7" name="video-list" id="video-7" /><label for="video-7">Capitulo 7</label>
+          <input type="radio" value="8" name="video-list" id="video-8" /><label for="video-8">Capitulo 8</label>
+          <input type="radio" value="9" name="video-list" id="video-9" /><label for="video-9">Capitulo 9</label>
+          <input type="radio" value="10" name="video-list" id="video-10" /><label for="video-10">Capitulo 10</label>
+
+          <!-- videos -->
+          <div class="video video-1">
+           <iframe width="560" height="315" src="https://www.youtube.com/embed/iRaQ4G9xEqw" frameborder="0" allowfullscreen></iframe>
+          </div>
+
+          <div class="video video-2">
+           <iframe width="560" height="315" src="https://www.youtube.com/embed/9zKNolqsRUw" frameborder="0" allowfullscreen></iframe>
+          </div>
+
+          <div class="video video-3">
+           <iframe width="560" height="315" src="https://www.youtube.com/embed/3I-EMFzp9AY" frameborder="0" allowfullscreen></iframe>
+          </div>
+
+          <div class="video video-4">
+           <iframe width="560" height="315" src="https://www.youtube.com/embed/f9eKUdWRDeE" frameborder="0" allowfullscreen></iframe>
+          </div>
+
+          <div class="video video-5">
+           <iframe width="560" height="315" src="https://www.youtube.com/embed/UNjfoBkXqHw" frameborder="0" allowfullscreen></iframe>
+          </div>
+
+          <div class="video video-6">
+           <iframe width="560" height="315" src="https://www.youtube.com/embed/QUQhdge2VRg" frameborder="0" allowfullscreen></iframe>
+          </div>
+
+          <div class="video video-7">
+           <iframe width="560" height="315" src="https://www.youtube.com/embed/qicU-vCLw_w" frameborder="0" allowfullscreen></iframe>
+          </div>
+
+          <div class="video video-8">
+           <iframe width="560" height="315" src="https://www.youtube.com/embed/1Hee6OyZemk" frameborder="0" allowfullscreen></iframe>
+          </div>
+
+          <div class="video video-9">
+           <iframe width="560" height="315" src="https://www.youtube.com/embed/-9ORfcFvjMc" frameborder="0" allowfullscreen></iframe>
+          </div>
+
+          <div class="video video-10">
+           <iframe width="560" height="315" src="https://www.youtube.com/embed/LhblTmnGeIk" frameborder="0" allowfullscreen></iframe>
+          </div>
+ <!-- videos -->
+</div>
+<div class="section grey">
+    <div class="container">
+        <div class="p-t-60 p-b-50">
+
+        </div>
+    </div>
+</div>
+<div class="section black contact-details green-icons">
+    <div class="container">
+        <div class="row">
+
+            <div class="col-md-3 text-center">
+                <div class="services-box-3">
+                    <i class="fa fa-envelope"></i>
+                    <div class="content">
+                        <p>
+                            E-mail</p>
+                        <h3>
+                            InglesAI26@gmail.com</h3>
                     </div>
                 </div>
             </div>
+
         </div>
-        <div class="section black contact-details green-icons">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-3 text-center">
-                        <div class="services-box-3">
-                            <i class="fa fa-phone"></i>
-                            <div class="content">
-                                <p>
-                                    Phone</p>
-                                <h3>
-                                    +1 555 666 9999</h3>
-                            </div>
-                        </div>
+    </div>
+</div>
+<div class="section white footer">
+    <div class="container">
+        <div class="p-t-30 p-b-50">
+            <div class="row">
+                <div class="col-md-2 col-lg-2 col-sm-2 col-xs-12 xs-m-b-20">
+                    <img src="assets/img/logo_condensed.png" alt="" data-src="assets/img/logo_condensed.png"
+                        data-src-retina="assets/img/logo2x.png" width="119" height="22" />
+
+                </div>
+                <div class="col-md-4 col-lg-3 col-sm-4  col-xs-12 xs-m-b-20">
+
+                    <div class="xs-no-padding col-md-6 col-lg-6 col-sm-6">
+
+                        <a href="javascript:">InglesAI26@gmail.com</a>
                     </div>
-                    <div class="col-md-3 text-center">
-                        <div class="services-box-3">
-                            <i class="fa fa-envelope"></i>
-                            <div class="content">
-                                <p>
-                                    E-mail</p>
-                                <h3>
-                                    letstalk@thempleite.com</h3>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-3 text-center">
-                        <div class="services-box-3">
-                            <i class="fa fa-map-marker "></i>
-                            <div class="content">
-                                <p>
-                                    Postal</p>
-                                <h3>
-                                    32-Grey Suite, NY</h3>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-3 text-center">
-                        <div class="services-box-3">
-                            <i class="fa fa-pinterest-square"></i>
-                            <div class="content">
-                                <p>
-                                    Pinterest</p>
-                                <h3>
-                                    pinterest.com/frittt</h3>
-                            </div>
-                        </div>
+                    <div class="clearfix">
                     </div>
                 </div>
-            </div>
-        </div>
-        <div class="section white footer">
-            <div class="container">
-                <div class="p-t-30 p-b-50">
-                    <div class="row">
-                        <div class="col-md-2 col-lg-2 col-sm-2 col-xs-12 xs-m-b-20">
-                            <img src="assets/img/logo_condensed.png" alt="" data-src="assets/img/logo_condensed.png"
-                                data-src-retina="assets/img/logo2x.png" width="119" height="22" />
-                            <br />
-                            <br />
-                            © Frittt Templates.
-                            <br />
-                            All Rights Reserved.
-                        </div>
-                        <div class="col-md-4 col-lg-3 col-sm-4  col-xs-12 xs-m-b-20">
-                            <address class="xs-no-padding  col-md-6 col-lg-6 col-sm-6  col-xs-12">
-                                32 - Grey Suite<br>
-                                Odd Street,<br>
-                                NY, USA.
-                            </address>
-                            <div class="xs-no-padding col-md-6 col-lg-6 col-sm-6">
-                                <div>
-                                    (1) 555 666 9999</div>
-                                <a href="javascript:">letstalk@thempleite.com</a>
-                            </div>
-                            <div class="clearfix">
-                            </div>
-                        </div>
-                        <div class="col-md-2 col-lg-2 col-sm-2  col-xs-12 xs-m-b-20">
-                            <div class="bold">
-                                We Are Hiring</div>
-                            Send you resume at <a href="javascript:">careers@thempleite.com</a>
-                        </div>
-                        <div class="col-md-2 col-lg-2 col-sm-2  col-xs-12 ">
-                            <div class="bold">
-                                FOLLOW US</div>
-                            <br />
-                            <a href="javascript:"><i class="fa fa-facebook fa-2x"></i></a>&nbsp; <a href="javascript:">
-                                <i class="fa fa-twitter fa-2x"></i></a>&nbsp; <a href="javascript:"><i class="fa fa-youtube-play  fa-2x">
-                                </i></a>&nbsp; <a href="javascript:"><i class="fa fa-github fa-2x"></i></a>&nbsp;
-                            <a href="javascript:"><i class="fa fa-dribbble fa-2x"></i></a>&nbsp; <a href="javascript:">
-                                <i class="fa fa-pinterest fa-2x"></i></a>
-                        </div>
-                    </div>
+                <div class="col-md-2 col-lg-2 col-sm-2  col-xs-12 ">
+                    <div class="bold">
+                        FOLLOW US</div>
+                    <br />
+                    <a href="javascript:"><i class="fa fa-facebook fa-2x"></i></a>&nbsp; <a href="javascript:">
+                        <i class="fa fa-twitter fa-2x"></i></a>&nbsp; <a href="javascript:"><i class="fa fa-youtube-play  fa-2x">
+                        </i></a>&nbsp; <a href="javascript:"><i class="fa fa-github fa-2x"></i></a>&nbsp;
+                    <a href="javascript:"><i class="fa fa-dribbble fa-2x"></i></a>&nbsp; <a href="javascript:">
+                        <i class="fa fa-pinterest fa-2x"></i></a>
                 </div>
             </div>
         </div>
     </div>
+</div>
+</div>
     <!-- BEGIN CORE JS FRAMEWORK -->
     <script type="text/javascript" src="assets/plugins/jquery-1.8.3.min.js"></script>
     <script src="assets/plugins/boostrapv3/js/bootstrap.min.js" type="text/javascript"></script>
